# book-maker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  book.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: release.yml
book/: chapter.md  mybook.md
book/img/: demo.drawio
book_maker/: clean.py  default.toml  imgprocessor.py  main.py  preprocessor.py  util.py
isc_book_maker/: default.toml  imgprocessor.py  latex_runner.py  main.py  pandoc_runner.py  util.py
